--- a/client/index.html
+++ b/client/index.html
@@ -6,61 +6,68 @@
   <title>Student Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    #editorContainer { min-height: 400px; }
+    .panel-container {
+        height: calc(100vh - 120px);
+    }
   </style>
 </head>
-<body class="bg-gradient-to-br from-indigo-50 to-purple-100 min-h-screen font-sans">
-  <div class="max-w-7xl mx-auto px-6 py-10">
-    <div class="flex justify-between items-center mb-10">
+<body class="bg-gradient-to-br from-indigo-50 to-purple-100 font-sans">
+  <div class="w-full h-screen flex flex-col">
+    <header class="flex justify-between items-center p-4 bg-white bg-opacity-50 shadow-md">
         <div class="text-left">
-            <h1 class="text-3xl font-extrabold text-purple-800">Programming Lab</h1>
-            <p class="text-gray-600 mt-2">Solve problems. Write code. Submit with confidence.</p>
+            <h1 class="text-2xl font-extrabold text-purple-800">Programming Lab</h1>
         </div>
-        <button id="logoutBtn" class="bg-red-500 hover:bg-red-600 text-white px-5 py-2 rounded-full shadow">Logout</button>
-    </div>
+        <div class="flex items-center gap-4">
+            <div class="flex items-center gap-2">
+                <label for="questionSelect" class="text-purple-800 font-semibold">Select Question:</label>
+                <select id="questionSelect" class="px-4 py-2 border border-purple-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-purple-400">
+                  <option>Loading...</option>
+                </select>
+            </div>
+            <button id="logoutBtn" class="bg-red-500 hover:bg-red-600 text-white px-5 py-2 rounded-full shadow-md transition-colors">Logout</button>
+        </div>
+    </header>
 
-    <div class="flex flex-col lg:flex-row justify-between items-center gap-4 mb-6">
-      <div class="flex items-center gap-2">
-        <label for="questionSelect" class="text-purple-800 font-semibold">Select Question:</label>
-        <select id="questionSelect" class="px-4 py-2 border border-purple-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-purple-400">
-          <option>Loading...</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-      <div class="bg-white rounded-2xl shadow-lg p-6 border-l-4 border-purple-400">
+    <main class="flex-grow flex gap-4 p-4 panel-container">
+      
+      <div class="w-1/3 flex-shrink-0 bg-white rounded-2xl shadow-lg p-6 flex flex-col overflow-y-auto">
         <h2 id="questionTitle" class="text-2xl font-semibold text-purple-700 mb-4">Problem Title</h2>
-        <p id="questionDescription" class="text-gray-800 mb-4">Description will appear here.</p>
-
-        <label for="languageSelect" class="block font-semibold text-gray-700 mt-4">Language</label>
-        <select id="languageSelect" class="w-full p-3 mb-4 border rounded-lg bg-gray-100 text-gray-600" disabled></select>
-
-        <div id="testCases" class="mt-6 space-y-4"></div>
-
-        <div class="mt-8 space-x-3">
-          <button id="runBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full shadow transition">Run Code</button>
-          <button id="submitBtn" class="bg-green-600 hover:bg-green-700 text-white px-5 py-2 rounded-full shadow transition">Submit Final Code</button>
+        <div class="prose max-w-none">
+            <p id="questionDescription" class="text-gray-800 mb-4">Description will appear here.</p>
         </div>
+        <div id="testCases" class="mt-6 space-y-4"></div>
       </div>
 
-      <div class="flex flex-col h-full">
-        <div id="editorContainer" class="h-[500px] w-full border border-gray-300 rounded-lg overflow-hidden"></div>
-
-        <div class="bg-white rounded-2xl shadow p-6 border-l-4 border-purple-400 mt-6 flex-grow flex flex-col">
-          <h3 class="text-lg font-semibold text-gray-800 mb-2">Output</h3>
-          <div id="outputBox" class="bg-gray-100 p-4 rounded-lg font-mono text-sm whitespace-pre-wrap flex-1 overflow-y-auto">
+      <div class="w-2/3 flex flex-col gap-4">
+        <div class="flex-grow flex flex-col bg-white rounded-2xl shadow-lg overflow-hidden">
+            <div class="flex justify-between items-center p-3 bg-gray-100 border-b border-gray-200">
+                <div class="flex items-center gap-2">
+                    <label for="languageSelect" class="block font-semibold text-gray-700">Language:</label>
+                    <select id="languageSelect" class="p-2 border rounded-lg bg-white text-gray-600 shadow-sm" disabled></select>
+                </div>
+                <div class="space-x-3">
+                  <button id="runBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-full shadow transition-colors">Run Code</button>
+                  <button id="submitBtn" class="bg-green-600 hover:bg-green-700 text-white px-5 py-2 rounded-full shadow transition-colors">Submit Final</button>
+                </div>
+            </div>
+            <div id="editorContainer" class="flex-grow h-full w-full"></div>
+        </div>
+        
+        <div class="h-1/3 flex-shrink-0 flex flex-col bg-white rounded-2xl shadow-lg">
+          <h3 class="text-lg font-semibold text-gray-800 p-3 bg-gray-100 border-b border-gray-200 rounded-t-2xl">Output</h3>
+          <div id="outputBox" class="bg-gray-800 text-white p-4 font-mono text-sm whitespace-pre-wrap flex-1 overflow-y-auto rounded-b-2xl">
             &gt; Output will appear here.
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
 
   <script>
+    // --- All of your existing JavaScript remains unchanged below ---
     const config = {
       API_BASE_URL: 'http://localhost:5050'
     };
@@ -138,7 +145,7 @@
 
       const tcDiv = document.getElementById("testCases");
       tcDiv.innerHTML = q.testCases?.filter(tc => !tc.hidden).map((test, i) => `
-        <div>
+        <div class="border-t pt-4 mt-4">
           <p class="font-semibold text-purple-700 mb-1">Sample Input ${i + 1}:</p>
           <pre class="bg-gray-100 p-3 rounded text-sm text-gray-800 font-mono">${test.input || '(empty)'}</pre>
           <p class="font-semibold text-purple-700 mt-2 mb-1">Expected Output ${i + 1}:</p>
@@ -169,7 +176,6 @@
             outputBox.textContent = `Compilation/Runtime Error:\n${stderr}`;
             outputBox.classList.add('text-red-500');
         } else {
-            // --- CORRECTED: Use a single backslash for a real newline ---
             outputBox.textContent = `Execution Output:\n${stdout.join('\n')}`;
         }
 
