--- a/client/student-login.html
+++ b/client/student-login.html
@@ -39,7 +39,7 @@
       try {
         const res = await axios.post('http://localhost:5050/api/auth/login', { user_id, password });
         localStorage.setItem('token', res.data.token);
-        window.location.href = '/index.html';
+        window.location.href = 'http://localhost:5050/index.html';
       } catch (err) {
         alert(err.response.data.message);
       }
